fix: ui bugs on mobile

--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -7,7 +7,6 @@
     &.dark-mode {
         border-left: 1px solid #555;
         input {
-                background: #333;
                 color: var(--primary-text);
             }
         
