--- a/src/app/pages/category/category.component.scss
+++ b/src/app/pages/category/category.component.scss
@@ -4,7 +4,7 @@
 
 .container {
     padding: 2.5rem;
-    max-width: 1000px;
+    max-width: 100%;
     margin: auto;
     background: var(--primary-bg, #ffffff);
     color: var(--primary-text, #000000);
