--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,6 +6,7 @@
  .container {
    padding: 2rem;
   width: 800px;
+    max-width: 100%;
    margin: auto;
  }
 
